<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="hello">Scanner </string>
    <string name="app_name">Stock Reader</string>
    <string name="sCode">Id</string>
    <string name="sMessage">Item</string>
    <string name="sHistoryCount">History count</string>
    <string name="sCount">Count</string>
    <string name="sSave">Save</string>
    <string name="sUpdate">Update</string>
    <string name="sClear">Clear</string>
    <string name="sRead">Read</string>
    <string name="sImport">Import</string>
    <string name="sImportWeb">Url</string>
    <string name="sImportSdCard">SdCard</string>
    <string name="sImportCsv">CSV</string>
    <string name="sItem">Item</string>
    <string name="sExport">Export</string>
    <string name="sExportWeb">Ftp</string>
    <string name="sExportSdCard">SdCard</string>
    <string name="sExportCsv">CSV</string>
    <string name="sSetting">Setting</string>
    <string name="sSelect">Select</string>
    <string name="sTxt">Text</string>
    <string name="sAdd">Add</string>
    <string name="sSet">Set</string>
    <string name="sQuery">List</string>
    <string name="sPath">Path</string>
    <string name="sDelete">Delete</string>
    <string name="scan">Scan</string>
    <string name="scan_resut_lable">Scan Result</string>
    <string name="msg_default_status">Center a barcode in the rectangle of window for scan. </string>
    <string name="download_wait">Downloading database\", \"Please, wait …</string>
    <string name="sLocation">Location</string>
    <string name="read">read</string>
    <string name="list">list</string>
    <string name="export">export</string>
    <string name="Id_exist">Id exist</string>
    <string name="Id_Not_Exist">Id Not Exist</string>
    <string name="sContinue">continue</string>
    <string name="sEnd">End</string>
    <string name="sThen_read_the_serial_numbers">Then read the serial numbers</string>
    <string name="sScan_serial_numbers">Scan serial numbers</string>
    <string name="sThe_code_already_exists">The code already exists</string>
    <string name="sYes">Yes</string>
    <string name="sNot">Not</string>
    <string name="sWarehouse">Warehouse</string>
    <string name="sWeb">Web</string>
    <string name="sSd">Sd</string>
    <string name="sCsv">Csv</string>
    <string name="sImport_completed_successfully">Import completed successfully</string>
    <string name="sAccept">Accept</string>
    <string name="sEnter_an_address_to_Import">Enter an address to Import</string>
    <string name="sExport_completed_successfully">Export completed successfully</string>
    <string name="sEnter_an_address_to_Export">Enter an address to Export</string>
    <string name="sSum">Sum</string>
    <string name="sDeleteDatabase">You are secure of delete the database?</string>
    <string name="sBarcode">Barcode</string>
    <string name="sPackage">Package</string>
    <string name="sName">Name</string>
    <string name="sPrice">Price</string>
    <string name="sFail_to_delete_database">Fail to delete database</string>
    <string name="sFractionally">Fractionally</string>
    <string name="sConvert_factor">Convert Factor</string>
    <string name="sUnit_for_pack">Unit for Pack</string>
    <string name="sSerializable">Serializable</string>
    <string name="sThe_item_does_not_exist">The item does not exist, you want to add?</string>
</resources>
