<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewBarcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sBarcode" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/editTextBarcode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.34" />

        <ImageButton
            android:id="@+id/imageButtonRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_camera" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sName" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sPrice" />

    <EditText
        android:id="@+id/editTextPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/checkBoxFractionally"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sFractionally" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right" >

            <CheckBox
                android:id="@+id/checkBoxSerializable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sSerializable" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textViewConvertFactor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sConvert_factor" />

    <EditText
        android:id="@+id/editTextConverFactor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textViewUnitForPack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sUnit_for_pack" />

    <EditText
        android:id="@+id/editTextUnitForPack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sPackage"
        android:id="@+id/checkBoxPackage" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="right" >

        <ImageButton
            android:id="@+id/imageButtonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_save" />
    </LinearLayout>

</LinearLayout>