<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
    android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@android:dimen/app_icon_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/imageButtonRead"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/read"
                    android:cropToPadding="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/barcode" />

                <TextView
                    android:id="@+id/tvRead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sRead" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/ibQuery"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/list"
                    android:cropToPadding="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/inventario" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sQuery" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="1" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:weightSum="1" >

                <ImageButton
                    android:id="@+id/ibImport"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/sImport"
                    android:cropToPadding="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/imp" />

                <TextView
                    android:id="@+id/bImport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sImport" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:weightSum="1" >

                <ImageButton
                    android:id="@+id/ibExport"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/export"
                    android:cropToPadding="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/export3" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sExport" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
