<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="fill_parent">
	<LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="match_parent"
        android:gravity="top">
    	<LinearLayout android:orientation="vertical" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:weightSum="1" android:gravity="center_horizontal">
			<ImageButton android:id="@+id/imageButtonRead" android:src="@android:drawable/ic_menu_camera" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
			<TextView android:layout_width="wrap_content" android:id="@+id/textView" android:layout_height="wrap_content" android:text="@string/sRead"/>
		</LinearLayout>
		<LinearLayout android:orientation="vertical" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:weightSum="1" android:gravity="center_horizontal">
			<ImageButton
                android:id="@+id/ibTextImput" android:layout_gravity="center_horizontal" android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:src="@android:drawable/ic_input_add"/>
	    	<TextView android:layout_width="wrap_content" android:id="@+id/textView" android:layout_height="wrap_content" android:text="@string/sSet"/>
    	</LinearLayout>
    	<LinearLayout android:orientation="vertical" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:weightSum="1" android:gravity="center_horizontal">
			<ImageButton android:id="@+id/ibSave" android:layout_gravity="center_horizontal" android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:src="@android:drawable/ic_menu_save"/>
	    	<TextView android:layout_width="wrap_content" android:id="@+id/textView" android:layout_height="wrap_content" android:text="@string/sSave"/>
    	</LinearLayout>
	</LinearLayout>
	<LinearLayout android:orientation="vertical" android:layout_height="match_parent" android:layout_width="match_parent">
	<TextView android:id="@+id/path" android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>
	<ListView android:id="@android:id/list" android:layout_height="match_parent" android:layout_width="match_parent"/>
	<TextView android:id="@android:id/empty" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="" />
	</LinearLayout>	
</LinearLayout>