<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical" android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/tvCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sCode"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <EditText
                android:id="@+id/etCode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="number" android:layout_weight="1">

                <requestFocus />
            </EditText>

            <ImageButton
                android:id="@+id/imageButtonRead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@android:drawable/ic_menu_camera" />

            <ImageButton
                android:id="@+id/ibQuery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@android:drawable/ic_menu_search" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" android:layout_marginBottom="5dp" android:layout_marginTop="5dp">

        <ImageView
            android:id="@+id/ivMessage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:src="@drawable/warning1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvDescr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:text="@string/sItem" />

            <TextView
                android:id="@+id/tvUnidades_x_pack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:text="@string/sUnit_for_pack" />

            <TextView
                android:id="@+id/tvPrecio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:text="@string/sPrice" />

            <LinearLayout
                android:id="@+id/LayoutHistoryCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvHistoryCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sHistoryCount" />

                <TextView
                    android:id="@+id/tvHistoryCountValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10px"
                    android:text="0" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutHistoryCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" android:layout_marginTop="5dp" android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/tvCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5px"
            android:text="@string/sCount" 
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:id="@+id/linearLayoutCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/checkBoxSum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sSum" android:checked="true"/>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right" android:layout_gravity="right">

                <ImageButton
                    android:id="@+id/bDecrease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:baselineAlignBottom="false"
                    android:cropToPadding="false"
                    android:src="@android:drawable/btn_minus" />

                <EditText
                    android:id="@+id/etCount"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:minEms="0"
                    android:text="1" />

                <ImageButton
                    android:id="@+id/bIncrease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@android:drawable/btn_plus" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" android:layout_marginTop="5dp" android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sLocation" android:textAppearance="?android:attr/textAppearanceLarge"/>

        <Spinner
            android:id="@+id/spLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true"
            android:prompt="@string/sLocation" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|right">

        <!--<LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:weightSum="1" >

            <ImageButton
                android:id="@+id/bClear"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/redo"
                android:text="@string/sClear" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sClear" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/bUpdate"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/inbox"
                android:text="@string/sUpdate" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sUpdate" />
        </LinearLayout>-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/bSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_save"
                android:text="@string/sSave" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sSave" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>